eks-deploy/dev/tools/ingress/back-trans-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-trans-ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: shared-alb-dev
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:me-central-1:568838100446:certificate/2f66ae3e-2a75-4056-8b9b-31fd1e54d53e
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-group-name: back-trans-tg-dev
    alb.ingress.kubernetes.io/healthcheck-path: /quicknode-webhook/health

spec:
  rules:
  - host: test.first.digiedgete.click
    http:
      paths:
      - path: /quicknode-webhook
        pathType: Prefix
        backend:
          service:
            name: back-trans-dev
            port:
              name: http-8800
